# deepagents-quickstarts

./: .gitignore  README.md
deep_research/: README.md  agent.py  research_agent.ipynb
deep_research/research_agent/: __init__.py  prompts.py
developer/: .env.example  .gitignore  README.md  agent.py  developer_agent.ipynb  langgraph.json  pyproject.toml
developer/developer_agent/: __init__.py  prompts.py  tools.py
personal_assistant/: README.md  test.ipynb
personal_assistant/src/personal_assistant/: email_assistant_deepagents.py  prompts.py  schemas.py
personal_assistant/src/personal_assistant/middleware/: __init__.py  email_assistant_hitl.py  email_post_interrupt.py
personal_assistant/src/personal_assistant/tools/: base.py
personal_assistant/src/personal_assistant/tools/default/: email_tools.py
